Fix lint script and add Husky

--- a/package.json
+++ b/package.json
@@ -8,20 +8,31 @@
     "test": "hardhat test",
     "coverage": "hardhat coverage",
     "gas-report": "REPORT_GAS=true hardhat clean && hardhat test",
-    "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:check",
+    "lint": "yarn run prettier && yarn run lint:sol && yarn run lint:ts",
     "lint:sol": "solhint --config ./.solhint.json \"src/**/*.sol\"",
-    "lint:ts": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore --ext .js,.ts .",
+    "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "deploy:goerli": "hardhat compile && hardhat --network goerli deploy",
-    "verify:goerli": "hardhat --network goerli etherscan-verify"
+    "verify:goerli": "hardhat --network goerli etherscan-verify",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/contracts": "^4.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "dotenv": "^16.0.3",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "hardhat": "^2.14.0",
     "hardhat-deploy": "^0.11.28",
+    "husky": "^8.0.3",
     "solhint": "^3.4.1",
     "solhint-plugin-prettier": "^0.0.5"
   }
